# deep_dark_analyzer

./: .env.dev  README.md  docker-compose.yaml  press_release_analyzer.py  pyproject.toml
backend/: alembic.ini  config.py  factory.py  main.py
backend/api/: router.py
backend/api/v1/: handlers.py  router.py  schemas.py
backend/api/v1/inference/: router.py  schemas.py
backend/api/v1/monitoring/: router.py  schemas.py
backend/celery/: inference.py  tasks.py
backend/db/: models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 2023-09-09_b582610ca2bd_init_db.py
backend/db/repositories/: task.py
docker/: backend.dockerfile
docker/nginx/: nginx.conf  nginx.dockerfile
frontend/: Dockerfile
frontend/src/: .env  App.tsx  ToastContainer.tsx  app.module.scss  fetch.ts  index.html  index.scss  main.tsx  package.json  pnpm-lock.yaml  vite.config.ts
